Added total for GET /users
